--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <header class="page__header">
       <nav class="navbar__menu">
         <ul id="navbar__list"></ul>
+        <button class="hamburger">
+          <span class="dash"></span>
+          <span class="dash"></span>
+          <span class="dash"></span>
+        </button>
       </nav>
     </header>
     <main>
